fixed ajax error bugs

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 <script>a = _.a</script>
 
 <!-- mithril -->
-<script src="/mithril.min.js"></script>
+<!-- <script src="/mithril.min.js"></script> -->
+<script src="/mithril.js"></script>
 <script src="/mithril-extended.js"></script>
 
 <!-- app -->
