switched the frontend from mithril to vue with webpack... not saying this was a good idea though

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,1 @@
-<div id="app"></div>
-
-<!-- css -->
-<link rel="stylesheet" type="text/css" href="/app.css">
-
-<!-- $ -->
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<!-- moment -->
-<script src="http://momentjs.com/downloads/moment.min.js"></script>
-<!-- isotope -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.min.js"></script>
-
-<!-- _ -->
-<script src="https://rawgit.com/farzher/prelude-ls-extended/master/browser.min.js"></script>
-<!-- a -->
-<script>a = _.a</script>
-
-<!-- mithril -->
-<!-- <script src="/mithril.min.js"></script> -->
-<script src="/mithril.js"></script>
-<script src="/mithril-extended.js"></script>
-
-<!-- app -->
-<script src="/app.js"></script>
+<div id="app"><pre class="info"><p v-for="(state, count) in info.counts"><a :class="{active:state==filter.where.state}" href="#" @click.prevent="changeWhere({state:state})">{{state}}: {{count}}</a></p><p><a :class="{active:undefined==filter.where.state}" href="#" @click.prevent="changeWhere({state:undefined})">Any</a></p></pre><pre class="info"><p v-for="queue in info.queues"><a :class="{active:queue==filter.where.type}" href="#" @click.prevent="changeWhere({type:queue})">{{queue}}</a></p><p><a :class="{active:undefined==filter.where.type}" href="#" @click.prevent="changeWhere({type:undefined})">Any</a></p></pre><br style="clear:both"><pre v-for="job in jobs" track-by="$index" class="job">{{{syntaxHighlight(job)}}}</pre></div><script src="/build.js"></script>
